# llmops-platform

./: .env.example  .gitignore  README.md  docker-compose.lite.yml  docker-compose.yml
.github/workflows/: ci.yml  eval-gate.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/v1/: __init__.py  applications.py  auth.py  cicd.py  cost.py  deployments.py  evaluations.py  experiments.py  gateway.py  prompts.py
backend/app/evaluators/: __init__.py  base.py  factuality.py  format_compliance.py  latency.py  registry.py  relevance.py  safety.py
backend/app/middleware/: auth.py  otel.py  rate_limiter.py
backend/app/models/: __init__.py  application.py  base.py  cost.py  deployment.py  enums.py  evaluation.py  experiment.py  prompt.py  user.py
backend/app/schemas/: auth.py  cost.py  deployment.py  evaluation.py  experiment.py  prompt.py
backend/app/services/: cache_service.py  cost_service.py  deployment_service.py  evaluation_service.py  experiment_service.py  gateway_service.py  langfuse_service.py  prompt_service.py  routing_service.py
backend/app/telemetry/: metrics.py  setup.py
backend/app/workers/: celery_app.py  cost_tasks.py  deployment_tasks.py  eval_tasks.py
backend/tests/: conftest.py  test_cost.py  test_evaluations.py  test_experiments.py  test_gateway.py  test_integration_flows.py  test_prompts.py
docs/: architecture.md  runbook.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
frontend/src/: app.tsx  index.css  main.tsx  router.ts
frontend/src/api/: client.ts  (+7 more)
otel-collector/: config.yaml
playwright/: README.md  config.js  playwright-testing-prompt.md
playwright/tests/: 01-auth.md  02-dashboard.md  03-prompts.md  04-experiments.md  05-evaluations.md  06-cost-usage.md  07-observability.md  08-deployments.md
prometheus/: prometheus.yml
scripts/: run_sample_eval.py  seed_data.py
tempo/: tempo.yaml
(+75 files in other folders)
